src/liquid/components/ld-select/ld-select.css
:host {
  display: inline-flex;

  .ld-select {
    flex-grow: 1;
    max-width: 100%;
  }
}

:host,
.ld-select {
  /* layout */
  --ld-select-min-width: 12.8125rem;
  --ld-select-min-height-sm: 2rem;
  --ld-select-min-height-md: 2.5rem;
  --ld-select-min-height-lg: 3.125rem;
  --ld-select-padding-x-sm: 0.625rem;
  --ld-select-padding-x-md: 0.75rem;
  --ld-select-padding-x-lg: 0.875rem;
  --ld-select-padding-y-sm: 0.25rem;
  --ld-select-padding-y-md: 0.5rem;
  --ld-select-padding-y-lg: 0.5rem;
  --ld-select-padding-right-sm: calc(2.5rem + 0.625rem);
  --ld-select-padding-right-md: calc(2.5rem + 0.75rem);
  --ld-select-padding-right-lg: calc(2.5rem + 0.875rem);
  --ld-select-icon-size-sm: 1rem;
  --ld-select-icon-size-md: 1.25rem;
  --ld-select-icon-size-lg: 1.5rem;
  --ld-select-trigger-line-height: 1.25;

  /* colors */
  --ld-select-col: var(--ld-col-neutral-900);
  --ld-select-col-disabled: var(--ld-col-neutral-100);
  --ld-select-col-border: var(--ld-col-neutral-100);
  --ld-select-col-border-hover: var(--ld-col-neutral-300);
  --ld-select-bg-col: var(--ld-col-wht);
  --ld-select-selection-col: var(--ld-col-wht);

  /* themable colors */
  --ld-select-invalid-col: var(--ld-thm-error);
  --ld-select-invalid-icon-col-hover: var(--ld-thm-error-hover);
  --ld-select-invalid-icon-col-focus: var(--ld-thm-error-focus);
  --ld-select-invalid-icon-col-active: var(--ld-thm-error-active);
  --ld-select-invalid-disabled-bg-col: var(--ld-thm-error-disabled);
  --ld-select-thm-col: var(--ld-thm-primary);
  --ld-select-thm-col-hover: var(--ld-thm-primary-hover);
  --ld-select-thm-col-focus: var(--ld-thm-primary-focus);
  --ld-select-thm-col-active: var(--ld-thm-primary-active);
  --ld-select-ghost-trigger-bg-col-hover: var(--ld-thm-primary-alpha-lowest);
  --ld-select-ghost-trigger-bg-col-focus: var(--ld-thm-primary-alpha-low);

  /* reset */
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }
  ul {
    list-style: none;
  }
}

.ld-select {
  display: inline-flex;
  position: relative;

  select + .ld-icon,
  ::slotted(ld-icon) {
    width: var(--ld-select-icon-size-md);
    height: var(--ld-select-icon-size-md);
  }

  ::slotted(ld-icon) {
    display: contents !important;
  }

  select {
    + .ld-icon,
    + .ld-select__icon {
      position: absolute;
      right: var(--ld-select-padding-x-md);
      top: 50%;
      transform: translateY(-50%);
    }

    + .ld-icon {
      width: var(--ld-select-icon-size-md);
      height: var(--ld-select-icon-size-md);
    }

    &:where(:not[multiple]) {
      padding-right: var(--ld-select-padding-right-md);
    }
  }

  &.ld-select--sm {
    select {
      + .ld-icon,
      + .ld-select__icon {
        right: var(--ld-select-padding-x-sm);
      }

      + .ld-icon {
        width: var(--ld-select-icon-size-sm);
        height: var(--ld-select-icon-size-sm);
      }

      &:where(:not[multiple]) {
        padding-right: var(--ld-select-padding-right-sm);
      }
    }
  }
  &.ld-select--lg {
    select {
      + .ld-icon,
      + .ld-select__icon {
        right: var(--ld-select-padding-x-lg);
      }

      + .ld-icon {
        width: var(--ld-select-icon-size-lg);
        height: var(--ld-select-icon-size-lg);
      }

      &:where(:not[multiple]) {
        padding-right: var(--ld-select-padding-right-lg);
      }
    }
  }
}

:where(.ld-select:not(.ld-select--inline):not(.ld-select--ghost)) {
  min-width: var(--ld-select-min-width);
}

.ld-select__select,
.ld-select__btn-trigger {
  width: 100%;
}

.ld-select > select,
.ld-select__btn-trigger {
  /*outline: none;*/
  position: relative;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  font: var(--ld-typo-body-m);
  line-height: var(--ld-select-trigger-line-height);
  border: 0;
  padding: var(--ld-select-padding-y-md) var(--ld-select-padding-x-md);
  border-radius: var(--ld-br-m);
  height: 100%;
  user-select: none;
  touch-action: manipulation;
  color: var(--ld-select-col);
  background-color: var(--ld-select-bg-col);
  text-align: left;
  appearance: none;
  -webkit-touch-callout: none;

  &:where(select) {
    width: 100%;

    &[multiple] {
      optgroup {
        padding: var(--ld-sp-8) 0;
        font-style: normal;
      }

      option {
        padding: var(--ld-sp-6) var(--ld-sp-6);
        margin: 0 calc(-1 * var(--ld-sp-6));
        border-radius: var(--ld-br-m);

        &:not(:last-of-type) {
          margin-bottom: var(--ld-sp-2);
        }
      }
    }
  }

  &:where(select:not(:disabled):not([aria-disabled='true'])),
  &:where(.ld-select__btn-trigger:not([aria-disabled='true'])) {
    cursor: pointer;
  }

  &:where([aria-expanded='true']) {
    z-index: 2;

    &:not(:focus:focus-visible):not(.ld-select__btn-trigger--detached) {
      box-shadow: none;
    }
  }

  &:disabled,
  &:disabled + .ld-select__icon,
  &:disabled + .ld-icon,
  &:where([aria-disabled='true']),
  &:where([aria-disabled='true']) + .ld-select__icon,
  &:where([aria-disabled='true']) + .ld-icon {
    color: var(--ld-select-col-disabled);
  }
}

.ld-select__btn-trigger {
  overflow: hidden;
}

:where(.ld-select),
:where(.ld-select) > select {
  min-height: var(--ld-select-min-height-md);
}

:where(.ld-select--sm),
:where(.ld-select--sm) > select {
  min-height: var(--ld-select-min-height-sm);
}

:where(.ld-select--lg),
:where(.ld-select--lg) > select {
  min-height: var(--ld-select-min-height-lg);
}

.ld-select--sm > select,
.ld-select--sm .ld-select__btn-trigger {
  padding: var(--ld-select-padding-y-sm) var(--ld-select-padding-x-sm);
}

.ld-select--lg > select,
.ld-select--lg .ld-select__btn-trigger {
  padding: var(--ld-select-padding-y-lg) var(--ld-select-padding-x-lg);
}

.ld-select--ghost {
  &:not(ld-select),
  select,
  .ld-select__btn-trigger {
    background-color: transparent;
  }

  select,
  .ld-select__btn-trigger {
    &:not(:focus) {
      box-shadow: none;
    }
  }
}
/* ... */

